[gd_scene load_steps=163 format=2]

[ext_resource path="res://Images/Troop/100/Move.png" type="Texture2D" id=1]
[ext_resource path="res://ScenarioScene/Military/Troop.gd" type="Script" id=2]
[ext_resource path="res://Images/TileEffect/Hit/Critical.png" type="Texture2D" id=3]
[ext_resource path="res://UIMain/TroopTitle/TroopTitle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/FZLB_GBK.TTF" type="FontFile" id=5]
[ext_resource path="res://ScenarioScene/Military/NumberFlashText.gd" type="Script" id=6]
[ext_resource path="res://ScenarioScene/Architecture/Routed.wav" type="AudioStream" id=7]
[ext_resource path="res://Images/TileEffect/Status/Routed.png" type="Texture2D" id=8]
[ext_resource path="res://Images/TileEffect/Hit/Hit.png" type="Texture2D" id=9]
[ext_resource path="res://Images/TileEffect/Stunt/SiegeBoost.png" type="Texture2D" id=10]
[ext_resource path="res://Images/TileEffect/Stunt/OffenseBoost.png" type="Texture2D" id=11]
[ext_resource path="res://Images/TileEffect/Stunt/DefenseBoost.png" type="Texture2D" id=12]
[ext_resource path="res://Images/TileEffect/Stunt/DefenseNerf.png" type="Texture2D" id=13]
[ext_resource path="res://Images/TileEffect/Stunt/OffenseNerf.png" type="Texture2D" id=14]
[ext_resource path="res://Images/TileEffect/Stunt/SiegeNerf.png" type="Texture2D" id=15]
[ext_resource path="res://Images/TileEffect/Stunt/SpeedBoost.png" type="Texture2D" id=16]
[ext_resource path="res://Images/TileEffect/Stunt/MoraleDecrease.png" type="Texture2D" id=17]
[ext_resource path="res://Images/TileEffect/Stunt/MoraleIncrease.png" type="Texture2D" id=18]
[ext_resource path="res://Images/TileEffect/Stunt/SpeedNerf.png" type="Texture2D" id=19]
[ext_resource path="res://Images/TileEffect/Stunt/Chaos.png" type="Texture2D" id=20]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 18 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 17 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 20 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=100]
animations = [ {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "OffenseNerf",
"speed": 10.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "MoraleIncrease",
"speed": 10.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "OffenseBoost",
"speed": 10.0
}, {
"frames": [ SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "SiegeBoost",
"speed": 10.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "SpeedBoost",
"speed": 10.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "DefenseBoost",
"speed": 10.0
}, {
"frames": [ SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ) ],
"loop": true,
"name": "MoraleDecrease",
"speed": 10.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "SiegeNerf",
"speed": 10.0
}, {
"frames": [ SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ) ],
"loop": true,
"name": "DefenseNerf",
"speed": 10.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "SpeedNerf",
"speed": 10.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": true,
"name": "Chaos",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1536, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=114]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1664, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=115]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1792, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=116]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=117]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=118]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=119]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=120]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=121]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=122]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=123]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=124]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=125]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=126]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=127]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=128]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1536, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=129]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1664, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=130]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1792, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=131]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1920, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=132]
animations = [ {
"frames": [ SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ) ],
"loop": false,
"name": "Critical",
"speed": 30.0
}, {
"frames": [ SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ) ],
"loop": false,
"name": "Hit",
"speed": 30.0
} ]

[sub_resource type="AtlasTexture" id=133]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=134]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=135]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=136]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=137]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=138]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=139]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 600, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=140]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 700, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=141]
animations = [ {
"frames": [ SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="FontFile" id=142]
size = 32
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
spacing_top = -5
spacing_bottom = -5
font_data = ExtResource( 5 )

[node name="Troop" type="Node2D"]
z_index = 10
script = ExtResource( 2 )

[node name="TroopArea" type="Area2D" parent="."]
position = Vector2( 64, 64 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TroopArea"]
frames = SubResource( 11 )

[node name="StuntSprite" type="AnimatedSprite2D" parent="TroopArea"]
visible = false
position = Vector2( 0, -1 )
frames = SubResource( 100 )
animation = "Chaos"

[node name="EffectSprite" type="AnimatedSprite2D" parent="TroopArea"]
visible = false
frames = SubResource( 132 )
animation = "Hit"

[node name="Routed" type="AnimatedSprite2D" parent="TroopArea"]
visible = false
frames = SubResource( 141 )

[node name="RoutedSound" type="AudioStreamPlayer" parent="TroopArea/Routed"]
stream = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="MovingSound" type="AudioStreamPlayer" parent="."]

[node name="AttackSound" type="AudioStreamPlayer" parent="."]

[node name="CriticalSound" type="AudioStreamPlayer" parent="."]

[node name="Title" type="Node2D" parent="."]
position = Vector2( 100, -28 )
z_index = 20

[node name="TroopTitle" parent="Title" instance=ExtResource( 4 )]
minimum_size = Vector2( 90, 56 )

[node name="NumberFlashText" type="Label" parent="."]
offset_right = 128.0
offset_bottom = 128.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 142 )
align = 1
valign = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="NumberFlashText"]
one_shot = true

[connection signal="input_event" from="TroopArea" to="." method="_on_TroopArea_input_event"]
[connection signal="animation_finished" from="TroopArea/AnimatedSprite2D" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="TroopArea/EffectSprite" to="." method="_on_EffectSprite_animation_finished"]
[connection signal="animation_finished" from="TroopArea/Routed" to="." method="_on_Routed_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="NumberFlashText/Timer" to="NumberFlashText" method="_on_Timer_timeout"]
